# mini-bash

./: README.md  REPL.ml  dune  dune-project  minibash.opam
.github/workflows/: build.yml
demos/: demoInterpret.ml  demoInterrupt.ml  demoParse.ml  dune
lib/: dune
